--- a/packages/registrations-service/package.json
+++ b/packages/registrations-service/package.json
@@ -23,7 +23,10 @@
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/config": "^4.0.2",
+    "@nestjs/throttler": "^6.0.0",
     "@nestjs/swagger": "^11.2.2",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "typeorm": "^0.3.27",
     "reflect-metadata": "^0.2.2",
     "pg": "^8.16.3",
