--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -3,6 +3,9 @@ services:
     container_name: aurora-db-deploy
     image: postgres:16
     restart: unless-stopped
+    # IMPORTANT: If you change DB credentials in .env.prod, you MUST remove the volume:
+    #   docker compose -f docker-compose.deploy.yml down -v
+    # Otherwise, Postgres will keep using the old credentials from the existing volume.
     env_file:
       - .env.prod
     environment:
