--- a/packages/auth-service/package.json
+++ b/packages/auth-service/package.json
@@ -23,7 +23,10 @@
   "@nestjs/passport": "^11.0.0",
   "@nestjs/typeorm": "^11.0.0",
   "@nestjs/config": "^4.0.2",
+  "@nestjs/throttler": "^6.0.0",
   "@nestjs/swagger": "^11.2.2",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
   "typeorm": "^0.3.27",
