--- a/packages/events-service/package.json
+++ b/packages/events-service/package.json
@@ -27,6 +27,9 @@
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/swagger": "^11.2.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/throttler": "^6.0.0",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
