--- a/packages/users-service/package.json
+++ b/packages/users-service/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/src/main.js",
+    "start": "node dist/app/src/main.js",
     "start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-    "start:prod": "node dist/src/main.js",
+    "start:prod": "node dist/app/src/main.js",
     "start:pm2": "pm2 start --name users-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json",
     "typeorm": "npx typeorm-ts-node-commonjs -d src/data-source.ts",
     "migration:generate": "npm run typeorm -- migration:generate -n",
@@ -24,9 +24,12 @@
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/config": "^4.0.2",
+    "@nestjs/throttler": "^6.0.0",
     "@nestjs/swagger": "^11.2.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.0",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "typeorm": "^0.3.27",
