--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -10,7 +10,10 @@
     "test/*.ts",
     "test/**/*.ts",
     "tests/*.ts",
-    "tests/**/*.ts"
+    "tests/**/*.ts",
+    "packages/**/src/**/*.ts",
+    "packages/**/test/**/*.ts",
+    "packages/**/tests/**/*.ts"
   ],
   "exclude": ["dist", "node_modules"]
 }
