--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -110,6 +110,28 @@ services:
     networks:
       - aurora_network
 
+  gateway:
+    image: nginx:1.25
+    restart: unless-stopped
+    depends_on:
+      auth-service:
+        condition: service_started
+      users-service:
+        condition: service_started
+      events-service:
+        condition: service_started
+      registrations-service:
+        condition: service_started
+    ports:
+      - '80:80'
+      # Descomente para expor TLS com certificados montados em ./nginx/certs
+      # - '443:443'
+    volumes:
+      - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/certs:/etc/nginx/certs:ro
+    networks:
+      - aurora_network
+
 volumes:
   pgdata:
 
