chore: commit pendente — atualizações e docs

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -47,9 +47,9 @@ server {
         proxy_pass http://events-service:3012/;
     }
 
-    location ~ ^/registrations(/.*)$ {
+    location /registrations/ {
         limit_req zone=api_limit burst=15 nodelay;
-        proxy_pass http://registrations-service:3013/registrations$1;
+        proxy_pass http://registrations-service:3013;
     }
 }
 
