fix(deploy): use GH_PAT secret instead of GHCR_PAT + health controller endpoints
- Fix deploy-to-vps.yml: The workflow was using secrets.GHCR_PAT but the
  actual configured secret is GH_PAT. This caused 'cannot perform an
  interactive login from a non TTY device' error.
- Add /registrations/health endpoint to health controller for gateway
  compatibility
- Add update-prod-env.sh helper script
- Update architecture review docs

--- a/.github/workflows/deploy-to-vps.yml
+++ b/.github/workflows/deploy-to-vps.yml
@@ -53,8 +53,7 @@ jobs:
             set +o allexport
             
             # Faz o login no GitHub Container Registry usando o token seguro do GitHub Secrets
-            # Caso queira usar o GH_PAT presente em .env.prod, remova esta linha.
-            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u evertonfoz --password-stdin
+            echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u evertonfoz --password-stdin
             
             # Baixa as imagens mais recentes definidas no docker-compose.deploy.yml
             docker compose --env-file .env.prod -f docker-compose.deploy.yml pull
